--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -19,3 +19,8 @@ include_directories(inc)
 file(GLOB_RECURSE SOURCES "src/*.cpp")
 
 add_library(${PROJECT_NAME} ${SOURCES})
+add_dependencies(${PROJECT_NAME} liblogger)
+
+target_link_libraries(${PROJECT_NAME}
+    logger
+)
